# 3-python-package-exercise-team-7

./: Pipfile  README.md  instructions.md  pyproject.toml  setup.py
.github/workflows/: build.yaml  event-log-multiple.yml  event-logger.yml
src/pytify/: __main__.py  albums.py  client.py
src/pytify_stats/: __main__.py  albums.py  client.py
tests/: _init_.py  test_albums.py  test_main.py
